--- a/index.html
+++ b/index.html
@@ -7,21 +7,10 @@
   <link rel="stylesheet" type="text/css" href="dist/css/app.css">
 </head>
 <body>
-  <div class="trivia-cont">
-    <div class="winner-cont">
-      <h3>Winner!</h3>
-      <img class="winner-img" src="" alt="">
-      <div class="winner-name"></div>
-    </div>
-    <div class="question-cont">
-      <div class="question"><b>Question:</b></div>
-      <div class="text-area"></div>
-    </div>
-  </div>
+  <iframe id="strawpreview" src="" style="width: 600px; height:
+    390px; border: 0;"></iframe>
   <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
   <script src="http://apps.twitchalerts.com/sdk/ta.min.js"></script>
-  <script type="text/javascript"
-          src="http://cdnjs.cloudflare.com/ajax/libs/string_score/0.1.10/string_score.min.js"></script>
   <script src="dist/js/app.min.js"></script>
 </body>
 </html>
