--- a/index.html
+++ b/index.html
@@ -2,13 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Trivia</title>
+  <title>Strawpoll</title>
   <link href='https://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="dist/css/app.css">
 </head>
 <body>
-  <iframe id="strawpreview" src="" style="width: 600px; height:
-    390px; border: 0;"></iframe>
+  <div class="trivia-cont">
+    <div class="winner-img-cont">
+      <img class="winner-img" src="" alt="">
+    </div>
+    <div class="text-area"></div>
+  </div>
   <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
   <script src="http://apps.twitchalerts.com/sdk/ta.min.js"></script>
   <script src="dist/js/app.min.js"></script>
