--- a/src/index.html
+++ b/src/index.html
@@ -7,12 +7,7 @@
   <link rel="stylesheet" type="text/css" href="dist/css/app.css">
 </head>
 <body>
-  <div class="trivia-cont">
-    <div class="winner-img-cont">
-      <img class="winner-img" src="" alt="">
-    </div>
-    <div class="text-area"></div>
-  </div>
+  <iframe id="strawpreview" src="" style="width: 600px; height: 390px; border: 0;"></iframe>"
   <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
   <script src="http://apps.twitchalerts.com/sdk/ta.min.js"></script>
   <script src="dist/js/app.min.js"></script>
